@@ -10,8 +10,8 @@ webassets>=0.10.1
 notebook>=4.0.0
 ipykernel>=4.0.0
 ghp-import2>=1.0.0
-ws4py==0.4.2
-watchdog==0.8.3
+aiohttp>=2.2.0
+watchdog>=0.8.3
 PyYAML==3.12
 toml==0.9.2
 
